<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/usa_can_flag_backdrop"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.barkerville.loonieexchange.ReverseLoonieExchange"
    tools:showIn="@layout/activity_reverse_loonie_exchange"
    >




    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/revActivityHeading"
        android:id="@+id/mainHeading"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="@dimen/abc_text_size_headline_material"
        android:textColor="#000000"
        android:background="@drawable/border_style"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/revUsdTextView"
        android:layout_marginTop="45dp"
        android:textSize="20dp"
        android:textColor="#000000"
        android:text="@string/revUsdTextView"
        android:background="@drawable/border_style"
        android:layout_below="@+id/mainHeading"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="31dp"
        android:layout_marginStart="31dp" />

    <EditText
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:id="@+id/usdEditText"
        android:layout_alignTop="@+id/revUsdTextView"
        android:layout_toRightOf="@+id/revUsdTextView"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="5dp"
        android:background="@drawable/border_style"
        android:textAlignment="center"
        android:gravity="center"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:id="@+id/revExchangeTextView"
        android:textColor="#000000"
        android:text="@string/exchangeTextView"
        android:layout_marginTop="80dp"
        android:layout_below="@+id/usdEditText"
        android:layout_centerHorizontal="true"
        android:background="@drawable/border_style" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:id="@+id/exEditText"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:layout_below="@+id/revExchangeTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="0dp"
        android:background="@drawable/border_style"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/revCadTextView"
        android:textColor="#000000"
        android:textSize="20dp"
        android:text="@string/revCadTextView"
        android:layout_marginBottom="34dp"
        android:layout_above="@+id/newActivity2"
        android:layout_centerHorizontal="true"
        android:background="@drawable/border_style"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/cadEditText"
        android:layout_below="@+id/exEditText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="90dp"
        android:paddingRight="50dp"
        android:paddingLeft="50dp"
        android:background="@drawable/border_style"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonCadToUsd"
        android:id="@+id/newActivity2"
        android:layout_marginBottom="64dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />


</RelativeLayout>
